# caddy

./: .env  .env.example  .gitignore  .gitmodules  ADK_INTEGRATION.md  INSTALL.md  README.md  SETUP_INSTRUCTIONS.md  check_prerequisites.py  freecad-mcp-port-changes.patch  pyproject.toml  requirements.txt  run_cad_agent.py  setup.py  test_freecad_connection.py
cad_agents/: __init__.py  main.py
cad_agents/agents/: __init__.py  analysis_agent.py  design_agent.py  root_agent.py
cad_agents/tools/: __init__.py  analysis_tools.py  freecad_tools.py
cad_agents/utils/: __init__.py  mcp_utils.py
tests/: demo_cad_agents.py  test_adk.py  test_adk_freecad.py  test_advanced_build.py  test_connection.py  test_freecad_connection.py  test_mcp.py  test_mechanical_part.py  test_simple_build.py
